# orbital

./: .agent-context.json  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  plan.txt
.agents/skills/: file-organizer
.claude/skills/: recent-projects
.cursor/skills/: close-loop-engineering  find-skills  writing-clearly-and-concisely
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
